[package]
name = "rusttator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["socks", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
